--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
-    "@midwayjs/validate": "^3.0.0"
+    "@midwayjs/validate": "^3.0.0",
+    "@midwayjs/view-nunjucks": "^3.11.5"
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.0.0",
