--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/typeorm": "^3.11.5",
     "@midwayjs/validate": "^3.0.0",
-    "@midwayjs/view-nunjucks": "^3.11.5"
+    "@midwayjs/view-nunjucks": "^3.11.5",
+    "mysql2": "^3.2.4",
+    "typeorm": "^0.3.15"
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.0.0",
