--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/typeorm": "^3.11.5",
-    "@midwayjs/validate": "^3.0.0",
+    "@midwayjs/validate": "^3.11.10",
     "@midwayjs/view-nunjucks": "^3.11.5",
     "mysql2": "^3.2.4",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
-    "@midwayjs/cli": "^2.0.0",
+    "@midwayjs/cli": "^2.1.1",
     "@midwayjs/mock": "^3.0.0",
     "@types/jest": "^29.2.0",
     "@types/koa": "^2.13.4",
@@ -33,6 +33,8 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node ./bootstrap.js",
+    "start:test": "NODE_ENV=test node ./bootstrap.js",
+    "start:staging": "NODE_ENV=staging node ./bootstrap.js",
     "dev": "cross-env NODE_ENV=local midway-bin dev --ts",
     "test": "midway-bin test --ts",
     "cov": "midway-bin cov --ts",
